--- a/snippets/vite-tag.liquid
+++ b/snippets/vite-tag.liquid
@@ -3,12 +3,28 @@
   Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
 {% endcomment %}
 {% assign path = vite-tag | replace: '~/', '../' | replace: '@/', '../' %}
-{% if path == "/frontend/entrypoints/customers.js" or path == "customers.js" %}
-  <script src="{{ 'customers.0-uxUFsu.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
-  <link rel="modulepreload" href="{{ 'modulepreload-polyfill.BCYanipZ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
-{% elsif path == "/frontend/entrypoints/theme.css" or path == "theme.css" %}
-  {{ 'theme.GFGXf3_Z.min.css' | asset_url | split: '?' | first | stylesheet_tag: preload: preload_stylesheet }}
-{% elsif path == "/frontend/entrypoints/theme.js" or path == "theme.js" %}
-  <script src="{{ 'theme.Cfke23E1.min.js' | asset_url | split: '?' | first }}" type="module" crossorigin="anonymous"></script>
-  <link rel="modulepreload" href="{{ 'modulepreload-polyfill.BCYanipZ.min.js' | asset_url | split: '?' | first }}" crossorigin="anonymous">
+{% liquid
+  assign path_prefix = path | slice: 0
+  if path_prefix == '/'
+    assign file_url_prefix = 'http://localhost:5173'
+  else
+    assign file_url_prefix = 'http://localhost:5173/frontend/entrypoints/'
+  endif
+  assign file_url = path | prepend: file_url_prefix
+  assign file_name = path | split: '/' | last
+  if file_name contains '.'
+    assign file_extension = file_name | split: '.' | last
+  endif
+  assign css_extensions = 'css|less|sass|scss|styl|stylus|pcss|postcss' | split: '|'
+  assign is_css = false
+  if css_extensions contains file_extension
+    assign is_css = true
+  endif
+%}
+<script src="http://localhost:5173/@id/__x00__vite-plugin-shopify:react-refresh" type="module"></script>
+<script src="http://localhost:5173/@vite/client" type="module"></script>
+{% if is_css == true %}
+  {{ file_url | stylesheet_tag }}
+{% else %}
+  <script src="{{ file_url }}" type="module"></script>
 {% endif %}
