set up tailwindcss

--- a/frontend/entrypoints/theme.css
+++ b/frontend/entrypoints/theme.css
@@ -4,3 +4,5 @@
 @import '@/styles/components';
 @import 'tailwindcss/utilities';
 @import '@/styles/utilities';
+
+@import '@/styles/tailwind-output.css'
