--- a/frontend/entrypoints/theme.css
+++ b/frontend/entrypoints/theme.css
@@ -1,8 +1,10 @@
 @import 'tailwindcss/base';
-@import '@/styles/base.css';
 @import 'tailwindcss/components';
-@import '@/styles/components';
-@import 'tailwindcss/utilities';
-@import '@/styles/utilities';
+@import 'tailwindcss/utilities'; 
 
-@import '@/styles/tailwind-output.css'
+
+@import '@/styles/base.css'; 
+@import '@/styles/components'; 
+@import '@/styles/utilities'; 
+
+@import '@/styles/tailwind-output.css';
