--- a/frontend/styles/base.css
+++ b/frontend/styles/base.css
@@ -1,82 +1,84 @@
-:root {
-  --font-size-fine: 0.75rem; /* text-xs */
-  --font-size-copy: 1rem; /* text-base */
-  --font-size-lead: 1.125rem; /* text-lg */
-  --font-size-heading: 2rem; /* text-2xl */
-  --font-size-display: 3rem; /* text-4xl */
-  --height-nav: 3rem;
-  --screen-height: 100vh;
+@layer base {
+  :root {
+    --font-size-fine: 0.75rem; /* text-xs */
+    --font-size-copy: 1rem; /* text-base */
+    --font-size-lead: 1.125rem; /* text-lg */
+    --font-size-heading: 2rem; /* text-2xl */
+    --font-size-display: 3rem; /* text-4xl */
+    --height-nav: 3rem;
+    --screen-height: 100vh;
 
-  @media (min-width: 32em) {
-    --height-nav: 4rem;
-  }
-  @media (min-width: 48em) {
-    --height-nav: 6rem;
-    --font-size-heading: 2.25rem; /* text-4xl */
-    --font-size-display: 3.75rem; /* text-6xl */
-  }
-  @supports (height: 100lvh) {
-    --screen-height: 100lvh;
-  }
-}
-
-* {
-  font-variant-ligatures: none;
-}
-
-body {
-  @apply border-primary/10 bg-contrast text-primary/90 antialiased;
-}
-
-html {
-  scroll-padding-top: 10rem;
-}
-
-model-viewer::part(default-progress-mask) {
-  display: none;
-}
-
-model-viewer::part(default-progress-bar) {
-  display: none;
-}
-
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
-  -webkit-appearance: none;
-}
-
-.prose {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    &:first-child {
-      @apply mt-0;
+    @media (min-width: 32em) {
+      --height-nav: 4rem;
+    }
+    @media (min-width: 48em) {
+      --height-nav: 6rem;
+      --font-size-heading: 2.25rem; /* text-4xl */
+      --font-size-display: 3.75rem; /* text-6xl */
+    }
+    @supports (height: 100lvh) {
+      --screen-height: 100lvh;
     }
   }
-}
 
-/* base-details-summary */
-summary {
-  cursor: pointer;
-  list-style: none;
-}
+  * {
+    font-variant-ligatures: none;
+  }
 
-summary::-webkit-details-marker {
-  display: none;
-}
+  body {
+    @apply border-primary/10 bg-contrast text-primary/90 antialiased;
+  }
 
-/* hide up & down arrow buttons (spinner) in input number */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+  html {
+    scroll-padding-top: 10rem;
+  }
 
-input[type='number'] {
-  -moz-appearance: textfield;
+  model-viewer::part(default-progress-mask) {
+    display: none;
+  }
+
+  model-viewer::part(default-progress-bar) {
+    display: none;
+  }
+
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+  }
+
+  .prose {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      &:first-child {
+        @apply mt-0;
+      }
+    }
+  }
+
+  /* base-details-summary */
+  summary {
+    cursor: pointer;
+    list-style: none;
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
+
+  /* hide up & down arrow buttons (spinner) in input number */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
