--- a/frontend/styles/components.css
+++ b/frontend/styles/components.css
@@ -1,38 +1,40 @@
-.icon {
-  @apply h-5 w-5;
-}
-
-.button {
-  @apply inline-block rounded px-6 py-3 text-center font-body-weight-bold;
-}
-
-.article {
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-heading text-primary;
+@layer components {
+  .icon {
+    @apply h-5 w-5;
   }
-  @apply prose mx-auto mb-12 grid justify-center font-body text-primary;
-  p,
-  ul,
-  li {
-    @apply mb-4 text-lg;
-  }
-  img {
-    @apply md:-mx-8 lg:-mx-16;
 
-    @media (min-width: 48em) {
-      width: calc(100% + 4rem);
-      max-width: 100vw;
+  .button {
+    @apply inline-block rounded px-6 py-3 text-center font-body-weight-bold;
+  }
+
+  .article {
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      @apply font-heading text-primary;
     }
-    @media (min-width: 64em) {
-      width: calc(100% + 8rem);
+    @apply prose mx-auto mb-12 grid justify-center font-body text-primary;
+    p,
+    ul,
+    li {
+      @apply mb-4 text-lg;
+    }
+    img {
+      @apply md:-mx-8 lg:-mx-16;
+
+      @media (min-width: 48em) {
+        width: calc(100% + 4rem);
+        max-width: 100vw;
+      }
+      @media (min-width: 64em) {
+        width: calc(100% + 8rem);
+      }
     }
   }
-}
 
-.swimlane {
-  @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll px-6 pb-4;
+  .swimlane {
+    @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll px-6 pb-4;
+  }
 }
