--- a/frontend/styles/tailwind-output.css
+++ b/frontend/styles/tailwind-output.css
@@ -1355,6 +1355,10 @@ select {
   bottom: 3rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -1381,6 +1385,10 @@ select {
 
 .top-nav {
   top: var(--height-nav);
+}
+
+.right-\[theme\(\'sidebarMargin\.default\'\)\] {
+  right: 1.75rem;
 }
 
 .-z-10 {
@@ -1562,10 +1570,6 @@ select {
   height: 2.5rem;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
 .h-24 {
   height: 6rem;
 }
@@ -1592,6 +1596,10 @@ select {
 
 .h-\[250px\] {
   height: 250px;
+}
+
+.h-\[theme\(\'btnHeight\.default\'\)\] {
+  height: 3.3rem;
 }
 
 .h-fit {
@@ -1708,6 +1716,10 @@ select {
   width: 100vw;
 }
 
+.w-\[30rem\] {
+  width: 30rem;
+}
+
 .min-w-\[18rem\] {
   min-width: 18rem;
 }
@@ -1766,6 +1778,10 @@ select {
 
 .flex-grow-0 {
   flex-grow: 0;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .basis-auto {
@@ -2054,12 +2070,12 @@ select {
   border-width: 0px;
 }
 
-.border-\[0\.5px\] {
-  border-width: 0.5px;
-}
-
 .border-2 {
   border-width: 2px;
+}
+
+.border-\[0\.5px\] {
+  border-width: 0.5px;
 }
 
 .border-x-0 {
@@ -2073,6 +2089,10 @@ select {
 
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-r-2 {
+  border-right-width: 2px;
 }
 
 .border-t {
@@ -2121,9 +2141,9 @@ select {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-zinc-800 {
+.border-zinc-100 {
   --tw-border-opacity: 1;
-  border-color: rgb(39 39 42 / var(--tw-border-opacity));
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }
 
 .border-t-contrast\/30 {
@@ -2186,6 +2206,11 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-zinc-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -2222,12 +2247,12 @@ select {
   padding: 0.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .p-6 {
@@ -2236,10 +2261,6 @@ select {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-3 {
-  padding: 0.75rem;
 }
 
 .px-0 {
@@ -2292,6 +2313,11 @@ select {
   padding-bottom: 0.75rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -2300,6 +2326,11 @@ select {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-\[theme\(\'sidebarMargin\.default\'\)\] {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .pb-10 {
@@ -2332,6 +2363,10 @@ select {
 
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pl-\[theme\(\'sidebarMargin\.default\'\)\] {
+  padding-left: 1.75rem;
 }
 
 .pr-16 {
@@ -2396,6 +2431,11 @@ select {
 
 .font-heading {
   font-family: var(--font-heading-family);
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -2593,6 +2633,12 @@ select {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2666,10 +2712,10 @@ select {
 /* side bar project */
 
 #shopify-react-root {
-  display: flex;
+  /*display: flex;
   height: 100%;
   width: 100%;
-  position: fixed;
+  position: fixed;*/
   z-index: 11;
   &.error-state {
     position: relative;
@@ -2720,21 +2766,33 @@ select {
       padding-left: 0rem;
       li {
         list-style-type: none;
-        a {
+        a, navlink {
           display: block;
         }
-        a {
+        a, navlink {
+          border-bottom-width: 1px;
+        }
+        a, navlink {
+          --tw-border-opacity: 1;
+          border-color: rgb(82 82 91 / var(--tw-border-opacity));
+        }
+        a, navlink {
           padding-left: 1.75rem;
           padding-right: 1.75rem;
         }
-        a {
-          padding-top: 0.5rem;
-          padding-bottom: 0.5rem;
+        a, navlink {
+          padding-top: 1rem;
+          padding-bottom: 1rem;
         }
-        a {
+        a, navlink {
           text-decoration-line: none;
         }
-        a {
+        a, navlink {
+          transition-property: all;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-duration: 150ms;
+        }
+        a, navlink {
           &.active {
             --tw-bg-opacity: 1;
             background-color: hsl(225 6% 12% / var(--tw-bg-opacity));
