--- a/frontend/styles/tailwind-input.scss
+++ b/frontend/styles/tailwind-input.scss
@@ -89,8 +89,12 @@
     @apply mx-auto max-h-[300px] w-full bg-contrast;
   }
 
+  /*** ICONS ***/
+  .appIcon {
+    @apply p-3 border-2 border-zinc-100 rounded-xl;
+  }
+
   /*** Side Bar ***/
- 
 
   #sidebar {
     @apply bg-contrast0;
@@ -116,7 +120,8 @@
       padding-left: 0rem;
       li {
         list-style-type: none;
-        a, navlink { 
+        a,
+        navlink {
           @apply block px-7 py-4 no-underline border-b-[1px] border-zinc-600 transition-all;
           &.active {
             @apply bg-contrast2 text-accent;
@@ -127,11 +132,18 @@
         }
       }
     }
+
+    /***  ***/
+    .app-tool-bar {
+      .appIcon {
+        @apply mr-4;
+      }
+    }
   } /* #sidebar */
 
   #sidebar form {
     position: relative;
-    input[type='search'] {
+    input[type="search"] {
       width: 100%;
       padding-left: 3rem;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
@@ -140,7 +152,7 @@
       background-size: 2rem;
       position: relative;
     }
-    input[type='search'].loading {
+    input[type="search"].loading {
       background-image: none;
     }
   } /* #sidebar form*/
@@ -149,7 +161,7 @@
   #search-spinner {
     @apply absolute left-[0.625rem] top-[0.75rem] h-8 w-8;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='%23000' strokeLinecap='round' strokeLinejoin='round' strokeWidth='2' d='M20 4v5h-.582m0 0a8.001 8.001 0 00-15.356 2m15.356-2H15M4 20v-5h.581m0 0a8.003 8.003 0 0015.357-2M4.581 15H9' /%3E%3C/svg%3E");
-    &[data-hidden='true'] {
+    &[data-hidden="true"] {
       visibility: hidden;
     }
   }
@@ -160,7 +172,7 @@
     width: 100%;
     @apply bg-contrast2;
     &.loading::before {
-      content: '';
+      content: "";
       position: absolute;
       width: 100%;
       height: 100%;
