--- a/frontend/styles/tailwind-output.css
+++ b/frontend/styles/tailwind-output.css
@@ -2111,11 +2111,6 @@ select {
   border-color: hsl(var(--input));
 }
 
-.border-lightgray5 {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 0% 92 / var(--tw-border-opacity));
-}
-
 .border-primary {
   border-color: rgba(var(--color-primary), 1);
 }
@@ -2565,11 +2560,6 @@ select {
   color: hsl(var(--secondary-foreground));
 }
 
-.text-slate-400 {
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
@@ -2739,6 +2729,20 @@ select {
     --tw-bg-opacity: 1;
     background-color: rgba(var(--color-contrast) / var(--tw-bg-opacity));
   }
+  /*** ICONS ***/
+  .appIcon {
+    border-radius: 0.75rem;
+  }
+  .appIcon {
+    border-width: 2px;
+  }
+  .appIcon {
+    --tw-border-opacity: 1;
+    border-color: rgb(244 244 245 / var(--tw-border-opacity));
+  }
+  .appIcon {
+    padding: 0.75rem;
+  }
   /*** Side Bar ***/
   #sidebar {
     --tw-bg-opacity: 1;
@@ -2764,33 +2768,41 @@ select {
       padding-left: 0rem;
       li {
         list-style-type: none;
-        a, navlink {
+        a,
+        navlink {
           display: block;
         }
-        a, navlink {
+        a,
+        navlink {
           border-bottom-width: 1px;
         }
-        a, navlink {
+        a,
+        navlink {
           --tw-border-opacity: 1;
           border-color: rgb(82 82 91 / var(--tw-border-opacity));
         }
-        a, navlink {
+        a,
+        navlink {
           padding-left: 1.75rem;
           padding-right: 1.75rem;
         }
-        a, navlink {
+        a,
+        navlink {
           padding-top: 1rem;
           padding-bottom: 1rem;
         }
-        a, navlink {
+        a,
+        navlink {
           text-decoration-line: none;
         }
-        a, navlink {
+        a,
+        navlink {
           transition-property: all;
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-duration: 150ms;
         }
-        a, navlink {
+        a,
+        navlink {
           &.active {
             --tw-bg-opacity: 1;
             background-color: hsl(225 6% 12% / var(--tw-bg-opacity));
@@ -2804,11 +2816,17 @@ select {
         }
       }
     }
+    /***  ***/
+    .app-tool-bar {
+      .appIcon {
+        margin-right: 1rem;
+      }
+    }
   }
   /* #sidebar */
   #sidebar form {
     position: relative;
-    input[type='search'] {
+    input[type="search"] {
       width: 100%;
       padding-left: 3rem;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='%23999' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z' /%3E%3C/svg%3E");
@@ -2817,7 +2835,7 @@ select {
       background-size: 2rem;
       position: relative;
     }
-    input[type='search'].loading {
+    input[type="search"].loading {
       background-image: none;
     }
   }
@@ -2840,7 +2858,7 @@ select {
   }
   #search-spinner {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3E%3Cpath stroke='%23000' strokeLinecap='round' strokeLinejoin='round' strokeWidth='2' d='M20 4v5h-.582m0 0a8.001 8.001 0 00-15.356 2m15.356-2H15M4 20v-5h.581m0 0a8.003 8.003 0 0015.357-2M4.581 15H9' /%3E%3C/svg%3E");
-    &[data-hidden='true'] {
+    &[data-hidden="true"] {
       visibility: hidden;
     }
   }
@@ -2855,7 +2873,7 @@ select {
   }
   #detail {
     &.loading::before {
-      content: '';
+      content: "";
       position: absolute;
       width: 100%;
       height: 100%;
