--- a/frontend/styles/tailwind-input.scss
+++ b/frontend/styles/tailwind-input.scss
@@ -117,7 +117,8 @@
 
     /***  ***/
     .app-display-list {
-      padding-left: 0rem;
+      @apply pl-0 pb-80;
+       
       li {
         list-style-type: none;
       }
@@ -162,6 +163,15 @@
       background-image: none;
     }
   } /* #sidebar form*/
+
+  /* TabSwitch */
+  .tab-controls{
+    button{
+      border: 2px solid white;
+      padding: 10px;
+      margin: 10px;
+    }
+  }
 
   /*hidden*/
   #search-spinner {
